@@ -8,7 +8,7 @@
 *********************************************************************/
 
 /*
- * $Id: OpenGL_Utils.c,v 1.82 2007/11/05 20:40:11 crc_canada Exp $
+ * $Id: OpenGL_Utils.c,v 1.83 2007/11/06 20:25:29 crc_canada Exp $
  *
  */
 #include "headers.h"
@@ -185,8 +185,8 @@ void glpOpenGLInitialize() {
 	glLineWidth(gl_linewidth);
 	glPointSize (gl_linewidth);
 
-glHint(GL_PERSPECTIVE_CORRECTION_HINT,GL_NICEST);
-glEnable (GL_RESCALE_NORMAL);
+	glHint(GL_PERSPECTIVE_CORRECTION_HINT,GL_NICEST);
+	glEnable (GL_RESCALE_NORMAL);
 
 	/*
      * JAS - ALPHA testing for textures - right now we just use 0/1 alpha
@@ -628,6 +628,15 @@ void zeroVisibilityFlag(void) {
 				((struct X3D_##thistype *)node)->set_##thisfield.p = NULL; \
 			} 
 
+/* just tell the parent (a grouping node) that there is a directionallight as a child */
+#define DIRECTIONALLIGHT_PARENT_FLAG \
+{ int i; \
+	for (i = 0; i < node->_nparents; i++) { \
+		struct X3D_Node *n = X3D_NODE(node->_parents[i]); \
+		if( n != 0 ) n->_renderFlags = n->_renderFlags | VF_DirectionalLight; \
+	} \
+}
+
 void startOfLoopNodeUpdates(void) {
 	struct X3D_Node* node;
 	struct X3D_Node* parents;
@@ -651,9 +660,12 @@ void startOfLoopNodeUpdates(void) {
 	for (i=0; i<nextEntry; i++){		
 		node = memoryTable[i];	
 		if (node != NULL) {
+			/* turn OFF these flags */
 			node->_renderFlags = node->_renderFlags & (0xFFFF^VF_Sensitive);
 			node->_renderFlags = node->_renderFlags & (0xFFFF^VF_hasSensitiveChildren);
 			node->_renderFlags = node->_renderFlags & (0xFFFF^VF_Viewpoint);
+			node->_renderFlags = node->_renderFlags & (0xFFFF^VF_DirectionalLight);
+			node->_renderFlags = node->_renderFlags & (0xFFFF^VF_otherLight);
 		}
 	}
 
@@ -667,6 +679,20 @@ void startOfLoopNodeUpdates(void) {
 		node = memoryTable[i];		
 		if (node != NULL) {
 			switch (node->_nodeType) {
+				/* Lights. DirectionalLights are "scope relative", PointLights and
+				   SpotLights are transformed */
+
+				BEGIN_NODE(DirectionalLight)
+					DIRECTIONALLIGHT_PARENT_FLAG
+				END_NODE
+				BEGIN_NODE(SpotLight)
+					update_renderFlag(node,VF_otherLight);
+				END_NODE
+				BEGIN_NODE(PointLight)
+					update_renderFlag(node,VF_otherLight);
+				END_NODE
+
+
 				/* some nodes, like Extrusions, have "set_" fields same as normal internal fields,
 				   eg, "set_spine" and "spine". Here we just copy the fields over, and remove the
 				   "set_" fields. */
